--- a/work/ec/index.html
+++ b/work/ec/index.html
@@ -146,41 +146,112 @@
   <!-- end of template -->
 
   <!-- sections -->
-  <div class="project-sections">
-    <div class="project-section add-padding" style="background-color:#FFF">
-      <div class="row">
-        <div class="small-12 medium-8 large-8 columns wow fadeIn" data-wow-offset="10">
-          <!-- <h3>Subtitle of project</h3> -->
 
-          <h1 class="animated wow fadeIn" data-wow-delay="0s">
-          EmployeeChannel</h1>
-          <p class="JE-description">A mobile app dedicated to the interactions between an organization and its employees. Unlike group communication apps focused on employee-to-employee communication, the EmployeeChannel app provides a direct and personal link between the organization and each employee. The app offers access to benefits, personal and professional information. It also serves as an automated self-service tool for employees to expedite common HR requests.
-          </p>
+          <div class="center-cut">
 
-        </div>
-        <div class="small-12 medium-4 large-3 columns">
-          <div class="project-meta wow fadeIn" data-wow-offset="10">
-            <div class="je-flash wow flash" data-wow-delay="6s" data-wow-duration="3s">
-<!--             <a href="work/index.html"><div id="case-study" class="animated wow fadeInRight" data-wow-delay="0.75s">CASE STUDY<img src="../../icons/ani-arrow.svg" id="throb"></div></a></div> -->
-            <h4>Enterprise Software</h4>
-              <p class="deliverables">
-              Design Research<br />
-              Art Direction<br />
-              Interaction Design<br />
-              High-Fidelity Prototypes<br />
-              HTML+CSS+Sass<br />
-              UX Research<br />
-              QA
-              </p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+              <div class="text-block-color" style="background: white;">
+                <div class="text-pod" style="max-width: 692px; margin: auto;">
+                  <h1 style="padding-top: 70px;">EmployeeChannel</h1>
+                  <p class="JE-description" style="font-size: 1.2em; margin-top: 0.9em;  padding-bottom: 50px;"> Employee often feel disconnected and unable to utilize their benefits and services. The idea of finding answers about their medical coverage, company policy or simply requesting vacation days is daunting. This situation can also leave a company in the dark about the true needs of the employees. According to a gallup poll, unhappy workers cost the United States $450 billion to $550 billion a year.</p>
+                </div>
+              </div>
 
-  <!-- project videos -->
+              <div class="text-block-color" style="background: #FAFAFA; padding: 70px 0 50px 0;">
+                <div class="text-pod" style="max-width: 692px; margin: auto;">
+                  <div class="small-head" style="font-size: 14px; font-weight: 800; margin-bottom: 16px;">THE CHALLENGE</div>
+                  <div class="medium-head" style="padding-bottom: 10px; font-size: 28px; font-weight: 600; ">Make HR Communication Valuable</div>
+                  <p class="JE-description"> Employee often feel disconnected and unable to utilize their benefits and services. The idea of finding answers about their medical coverage, company policy or simply requesting vacation days is daunting. This situation can also leave a company in the dark about the true needs of the employees. According to a gallup poll, unhappy workers cost the United States $450 billion to $550 billion a year.</p>
+                  <div class="small-head-inline" style="font-size: 14px; font-weight: 800; padding-top: 20px; margin-bottom: 16px;">MY ROLE</div>
+                  <p class="JE-description" style="">I was the Senior Product Designer and lead designing the employee we app, employer web app and employee Android and iOS apps. I worked closely with the Systems Architect, Front-End Engineer and managed the UI Engineer. I also worked hand-in-hand the the Head of Product on feature design and lead design research and testing.</p>
+                  <div class="small-head-inline" style="font-size: 14px; font-weight: 800; padding-top: 20px; margin-bottom: 16px;">KICKOFF</div>
+                  <p class="JE-description" style="">At the outset of the project, understanding all of the potential employee questions was an enormous task. I partnered with our HR thought leader to explore the common day-to-day situations in which an employee would ask a question about their healthcare benefits. We started-out by interviewing HR professionals in the hopes of understanding how they engages with employees and how they spend and allocate their time.</p>
+                  <div class="inline-image" style="width: 100%;">
+                    <img src="img/EC-CS-Photo-01.png" alt=""/ style="padding-bottom: 26px;">
+                  </div>
+                  <p class="JE-description" style="margin-bottom: 6px;">Based on our research employees said:</p>
+                  <p class="JE-description" style="margin-bottom:0;">1. I would engage in a mobile experience if it’s not too difficult to set-up</p>
+                  <p class="JE-description" style="margin-bottom:0;">2. I do not want to feel obligated to use the app itself as a part of my everyday workload</p>
+                  <p class="JE-description" style="margin-bottom:0;">3. I would use the app if I could easily find answers to their questions about my benefits</p>
+                </div>
+              </div>
+￼
+              <div class="text-block-color" style="background: #FFF; padding: 70px 0 50px 0;">
+                <div class="text-pod" style="max-width: 692px; margin: auto;">
+                  <div class="small-head" style="font-size: 14px; font-weight: 800; margin-bottom: 16px;">EARLY INSIGHTS</div>
+                  <p class="JE-description" style="">I also organized a "task mapping" exercise to discover what tasks an HR professional would need to complete. We grouped and organized the brainstormed tasks around the idea of “push” communications. This became the methodology for driving AI learning when questions were not being asked.</p>
+                  <div class="inline-image" style="width: 100%;">
+                    <img src="img/EC-CS-Photo-02.png" alt=""/ style="padding-bottom: 26px;">
+                  </div>
+                </div>
+              </div>
 
+              <div class="text-block-color" style="background: #FAFAFA; padding: 70px 0 50px 0;">
+                <div class="text-pod" style="max-width: 692px; margin: auto;">
+                  <div class="small-head" style="font-size: 14px; font-weight: 800; margin-bottom: 16px;">DISCOVERY</div>
+                  <div class="medium-head" style="padding-bottom: 10px; font-size: 28px; font-weight: 600; ">Stop Sounding the Horn</div>
+                  <p class="JE-description" style="">The reaction rate is the percentage of users who received push notifications and then tapped on them. In a nationwide poll, office notification have a reaction rate of 43%. That is 18% higher than consumer good apps. The number was still low but when the notification was personalized to the employee the reaction rate rose another 36%.</p>
+                  <p class="JE-description" style="">We found that employees valued finding immediate information. According to a poll 18% of employees were more likely to read company news and 82% of employees were more likely to read timely information about their benefits.</p>
+                  <p class="JE-description" style="">We also found that HR professionals spend a majority of their time answering repetitive task-oriented questions or writing detailed emails to employees about their individual benefits. 23 of 25 HR professionals we spoke to said that this type of communication accounted for 40% or more of their daily workload.</p>
+                </div>
+              </div>
+
+              <div class="text-block-color" style="background: #FFF; padding: 70px 0 50px 0;">
+                <div class="text-pod" style="max-width: 692px; margin: auto;">
+                  <div class="small-head" style="font-size: 14px; font-weight: 800; margin-bottom: 16px;">APPROACH</div>
+                  <div class="medium-head" style="padding-bottom: 10px; font-size: 28px; font-weight: 600; ">Relevant and Compliant</div>
+                  <p class="JE-description" style="">Employers still needed an effective tool to communicate news, events and policy but in an way that would strike a balance with what employees value without creating another HR bullhorn like email blast campaigns that had been ignored in the past.</p>
+                </div>
+              </div>
+
+              <div class="text-block-color" style="background: #FAFAFA; padding: 70px 0 50px 0;">
+                <div class="text-pod" style="max-width: 692px; margin: auto;">
+                  <div class="small-head" style="font-size: 14px; font-weight: 800; margin-bottom: 16px;">DESIGN</div>
+                  <div class="medium-head" style="padding-bottom: 10px; font-size: 28px; font-weight: 600; ">Striking a Balance: Push vs. Pull</div>
+                  <p class="JE-description" style="">Data shows up to 60% of users opt-out of push notifications. Silicon Valley investor Andrew Chen in his blog discusses notifications and the delicate relationship with the user, “Once your users begin receiving push notifications, it is critical that you respect this incredibly personal communication channel. By only sending hyper-targeted, personalized push messages that actually add value, you can ensure that your users don’t later opt-out of push…”</p>
+                  <p class="JE-description" style="">The design approach was to mix personalized benefit updates – alerts about your medical deductible, a notification telling you that your payroll was processed – with company published push notifications around policy, news or compliance deadlines.</p>
+                  <div class="inline-image" style="width: 100%;">
+                    <img src="img/interaction-model-sketch-small2.png" alt=""/ style="padding-bottom: 26px; max-width: 692px">
+                  </div>
+                  <p class="JE-description" style="">By building metrics into an interaction model, employees could feel in-control by quickly dismissing notifications directly in the timeline. The gesture pattern design also considered the recording of “read” actions and “dismissed” actions which lead to the first set of analytics. With these basic metrics we were able to begin building-in tips and best-practices to help guide employer publishing.</p>
+                  <div class="inline-image" style="width: 100%;">
+                    <img src="img/interaction-guide.png" alt=""/ style=" max-width: 692px">
+                  </div>
+                </div>
+              </div>
+
+              <div class="text-block-color" style="background: #fafafa; padding: 70px 0 50px 0;">
+                <div class="text-pod" style="max-width: 692px; margin: auto;">
+                  <div class="medium-head" style="padding-bottom: 10px; font-size: 28px; font-weight: 600; ">Personal Information from a Impersonal Bot</div>
+                  <p class="JE-description" style="">Employers still needed an effective tool to communicate news, events and policy but in an way that would strike a balance with what employees value without creating another HR bullhorn like email blast campaigns that had been ignored in the past.</p>
+                  <div class="inline-image" style="width: 100%;">
+                    <img src="img/logic-chart.jpg" alt=""/ style="padding-bottom: 26px; max-width: 692px">
+                  </div>
+                  <p class="JE-description" style="">Designing the chat bot logic and understanding each decision along the employee’s path to an answer was easy enough although we didn’t have a database full of all the potential answers. We only had a set of 1:1 questions and answers.</p>
+                  <p class="JE-description" style="">Work began with the AI team and our data scientist, we decided to track the interactions to help train the engine. Although it became apparent that this would take time and the feature needed to be ready for the next release cycle.</p>
+                  <p class="JE-description" style="">I decided to design the chat bot right away. The challenge was now to create a chat bot that mimics basic logic before the framework was engineered. This way when the logic was applied behind-the-scenes, users would already be accustomed to the UX.</p>
+                  <p class="JE-description" style="">The initial version displayed a series of well-timed ellipses animations to mimic “system processing time.” This gave the employee the feeling that the system was thinking about their question. By asking simple A or B questions and providing potential topics to choose from, the employee’s actions helped train the AI engine.</p>
+                  <div id="two-image-box" style="padding-bottom: 40px;">
+                    <video width="320" autoplay="autoplay" loop="true" style="float: left; padding-right: 12px;"">
+                      <source src="img/chatbot.mp4" type="video/mp4">
+                    </video>
+                    <img src="img/search-results.png" style="max-width: 320px; max-height: 548px;">
+                  </div>
+                </div>
+              </div>
+
+              <div class="text-block-color" style="background: #FFF; padding: 70px 0 50px 0;">
+                <div class="text-pod" style="max-width: 692px; margin: auto;">
+                  <div class="small-head" style="font-size: 14px; font-weight: 800; margin-bottom: 16px;">IMPACT</div>
+                  <div class="medium-stat" style="padding-bottom: 18px; font-size: 26px; font-weight: 300; line-height: 1.2em;">Opt-out rates for news and event publications dropped <span style="font-weight: 800;">32%</span> with new employee users</div>
+                  <div class="medium-stat" style="padding-bottom: 18px; font-size: 26px; font-weight: 300; line-height: 1.2em;">Enterprise sales increased <span style="font-weight: 800;">460%</span> in 1.5 years</div>
+                  <div class="medium-stat" style="padding-bottom: 18px; font-size: 26px; font-weight: 300; line-height: 1.2em;">Employees were satisfied with the answers they found <span style="font-weight: 800;">96.4%</span> of the time</div>
+                </div>
+              </div>
+￼
+
+<!-- center-cut div -->
 </div>
+
 
     <div class="footer">
       <div class="footer-center">
