editing and pull quote

--- a/work/ec/index.html
+++ b/work/ec/index.html
@@ -152,7 +152,10 @@
               <div class="text-block-color" style="background: white;">
                 <div class="text-pod" style="max-width: 692px; margin: auto;">
                   <h1 style="padding-top: 70px;">EmployeeChannel</h1>
-                  <p class="JE-description" style="font-size: 1.2em; margin-top: 0.9em;  padding-bottom: 50px;"> Employees often feel disconnected and unable to utilize their benefits and services. The idea of searching for answers about their medical coverage, company policy or simply requesting vacation days is sometimes daunting. This situation can also leave a company in the dark about the true needs of the employees. According to a gallup poll, unhappy workers cost the United States $450 billion to $550 billion a year.</p>
+                  <p class="JE-description" style="font-size: 1.2em; margin-top: 0.9em;"> Employees often feel disconnected and unable to utilize their benefits and services. The idea of searching for answers about their medical coverage, company policy or simply requesting vacation days is sometimes daunting. This situation can also leave a company in the dark about the true needs of the employees. According to a gallup poll, unhappy workers cost the United States $450 billion to $550 billion a year.</p>
+
+                  <div class="small-head-inline" style="font-size: 14px; font-weight: 800; padding-top: 20px; margin-bottom: 16px;">MY ROLE</div>
+                  <p class="JE-description" style="  padding-bottom: 50px;">I was the Senior Product Designer and lead designing the employee web app, employer web app and employee Android and iOS apps. I worked closely with the Systems Architect, Front-End Engineer and managed the UI Engineer. I also worked hand-in-hand the the Head of Product on feature design and lead design research and testing.</p>
                 </div>
               </div>
 
@@ -160,11 +163,10 @@
                 <div class="text-pod" style="max-width: 692px; margin: auto;">
                   <div class="small-head" style="font-size: 14px; font-weight: 800; margin-bottom: 16px;">THE CHALLENGE</div>
                   <div class="medium-head" style="padding-bottom: 10px; font-size: 28px; font-weight: 600; ">Make HR Communication Valuable</div>
-                  <p class="JE-description"> Employee often feel disconnected and unable to utilize their benefits and services. The idea of finding answers about their medical coverage, company policy or simply requesting vacation days is daunting. This situation can also leave a company in the dark about the true needs of the employees. According to a gallup poll, unhappy workers cost the United States $450 billion to $550 billion a year.</p>
-                  <div class="small-head-inline" style="font-size: 14px; font-weight: 800; padding-top: 20px; margin-bottom: 16px;">MY ROLE</div>
-                  <p class="JE-description" style="">I was the Senior Product Designer and lead designing the employee we app, employer web app and employee Android and iOS apps. I worked closely with the Systems Architect, Front-End Engineer and managed the UI Engineer. I also worked hand-in-hand the the Head of Product on feature design and lead design research and testing.</p>
+                  <p class="JE-description">Build a one-stop-shop solution that aggregates benefit information and provides instant responses to employee queries while improving communication between employee and the company.</p>
+
                   <div class="small-head-inline" style="font-size: 14px; font-weight: 800; padding-top: 20px; margin-bottom: 16px;">KICKOFF</div>
-                  <p class="JE-description" style="">At the outset of the project, understanding all of the potential employee questions was an enormous task. I partnered with our HR thought leader to explore the common day-to-day situations in which an employee would ask a question about their healthcare benefits. We started-out by interviewing HR professionals in the hopes of understanding how they engages with employees and how they spend and allocate their time.</p>
+                  <p class="JE-description" style="">At the outset of the project, understanding all of the potential employee questions was an enormous task. I partnered with our HR thought leader to explore the common day-to-day situations in which an employee would ask a question about their healthcare benefits. We started-out by interviewing HR professionals and employees in the hopes of understanding how they engages with employees and how they spend and allocate their time.</p>
                   <div class="inline-image" style="width: 100%;">
                     <img src="img/EC-CS-Photo-01.png" alt=""/ style="padding-bottom: 26px;">
                   </div>
@@ -190,8 +192,15 @@
                   <div class="small-head" style="font-size: 14px; font-weight: 800; margin-bottom: 16px;">DISCOVERY</div>
                   <div class="medium-head" style="padding-bottom: 10px; font-size: 28px; font-weight: 600; ">Stop Sounding the Horn</div>
                   <p class="JE-description" style="">The reaction rate is the percentage of users who received push notifications and then tapped on them. In a nationwide poll, office notification have a reaction rate of 43%. That is 18% higher than consumer good apps. The number was still low but when the notification was personalized to the employee the reaction rate rose another 36%.</p>
+
+                <div class="pull-quote-box" style="margin: 40px 0;">
+                  <div class="pull-line" style="height: 1px; background-color: #ddd; width: 12em; margin: auto;"></div>
+                  <div class="pull-quote" style="font-size: 3em; font-weight: 200; color: #6f6f6f; line-height: 1.2em; text-align: center; padding: 18px 0;">"23 out of 25 HR professionals said that repetitive task-oriented questions accounted for 40% or more of their daily workload."</div>
+                  <div class="pull-line" style="height: 1px; background-color: #ddd; width: 12em; margin: auto;"></div>
+                </div>
+
                   <p class="JE-description" style="">We found that employees valued finding immediate information. According to a poll 18% of employees were more likely to read company news and 82% of employees were more likely to read timely information about their benefits.</p>
-                  <p class="JE-description" style="">We also found that HR professionals spend a majority of their time answering repetitive task-oriented questions or writing detailed emails to employees about their individual benefits. 23 of 25 HR professionals we spoke to said that this type of communication accounted for 40% or more of their daily workload.</p>
+                  <p class="JE-description" style="">We also found that HR professionals spend a majority of their time answering repetitive questions or writing detailed emails to employees about their individual benefits. 23 out of 25 HR professionals said that repetitive task-oriented questions accounted for 40% or more of their daily workload.</p>
                 </div>
               </div>
 
@@ -234,7 +243,7 @@
                     <img src="img/logic-chart.jpg" alt=""/ style="padding-bottom: 26px; max-width: 692px">
                   </div>
 
-                  <p class="JE-description" style="">Designing the chat bot logic and understanding each decision along the employee’s "path to an answer" was easy enough although we didn’t have a database full of all the potential answers. We only had a set of 1:1 questions and answers.</p>
+                  <p class="JE-description" style="">Designing the chat bot logic and understanding each decision along the employee’s "path to an answer"x was easy enough although we didn’t have a database full of all the potential answers. We only had a set of 1:1 questions and answers.</p>
 
                   <p class="JE-description" style="">Work began with the AI team and our data scientist, we decided to track the interactions to help train the engine. Although it became apparent that this would take time and the feature needed to be ready for the next release cycle.</p>
 
