--- a/work/ec/index.html
+++ b/work/ec/index.html
@@ -199,7 +199,7 @@
                   <div class="pull-line" style="height: 1px; background-color: #ddd; width: 12em; margin: auto;"></div>
                 </div>
 
-                  <p class="JE-description" style="">We found that employees valued finding immediate information. According to a poll 18% of employees were more likely to read company news and 82% of employees were more likely to read timely information about their benefits.</p>
+                  <p class="JE-description" style="">We found that employees valued finding immediate information. According to a poll, 18% of employees were more likely to read company news and 82% of employees were more likely to read timely information about their benefits.</p>
                   <p class="JE-description" style="">We also found that HR professionals spend a majority of their time answering repetitive questions or writing detailed emails to employees about their individual benefits. 23 out of 25 HR professionals said that repetitive task-oriented questions accounted for 40% or more of their daily workload.</p>
                 </div>
               </div>
@@ -228,7 +228,7 @@
                     <img src="img/interaction-guide.png" alt=""/ style=" max-width: 692px">
                   </div>
 
-                  <p class="JE-description" style="">By building metrics into an interaction model, employees could feel in-control by quickly dismissing notifications directly in the timeline. The gesture pattern design also considered the recording of “read” actions and “dismissed” actions which lead to the first set of analytics. With these basic metrics we were able to begin building-in tips and best-practices to help guide employer publishing.</p>
+                  <p class="JE-description" style="">By building metrics into an interaction model, employees could feel in-control by quickly dismissing notifications directly in the timeline. The gesture pattern design also considered the recording of “read” actions and “dismissed” actions which lead to the first set of analytics. With these basic metrics, we were able to begin building-in tips and best practices to help guide employer publishing.</p>
 
                 </div>
               </div>
@@ -237,17 +237,17 @@
                 <div class="text-pod" style="max-width: 692px; margin: auto;">
                   <div class="medium-head" style="padding-bottom: 10px; font-size: 28px; font-weight: 600; ">Personal Information from a Impersonal Bot</div>
 
-                  <p class="JE-description" style="">Employers still needed an effective tool to communicate news, events and policy but in an way that would strike a balance with what employees value without creating another HR bullhorn like email blast campaigns that had been ignored in the past.</p>
+                  <p class="JE-description" style="">Employers still needed an effective tool to communicate news, events, and policy but in a way that would strike a balance with what employees value without creating another HR bullhorn like email blast campaigns that had been ignored in the past.</p>
 
                   <div class="inline-image" style="width: 100%;">
                     <img src="img/logic-chart.jpg" alt=""/ style="padding-bottom: 26px; max-width: 692px">
                   </div>
 
-                  <p class="JE-description" style="">Designing the chat bot logic and understanding each decision along the employee’s "path to an answer"x was easy enough although we didn’t have a database full of all the potential answers. We only had a set of 1:1 questions and answers.</p>
+                  <p class="JE-description" style="">Designing the chatbot logic and understanding each decision along the employee’s "path to an answer"x was easy enough although we didn’t have a database full of all the potential answers. We only had a set of 1:1 questions and answers.</p>
 
                   <p class="JE-description" style="">Work began with the AI team and our data scientist, we decided to track the interactions to help train the engine. Although it became apparent that this would take time and the feature needed to be ready for the next release cycle.</p>
 
-                  <p class="JE-description" style="">I decided to design the chat bot right away. The challenge was now to create a chat bot that mimics basic logic before the framework was engineered. This way when the logic was applied behind-the-scenes, users would already be accustomed to the UX.</p>
+                  <p class="JE-description" style="">I decided to design the chatbot right away. The challenge was now to create a chatbot that mimics basic logic before the framework was engineered. This way when the logic was applied behind-the-scenes, users would already be accustomed to the UX.</p>
 
                   <div id="two-image-box" style="padding-bottom: 20px;">
                     <video width="320" autoplay="autoplay" loop="true" style="float: left; padding-right: 12px; padding-bottom: 20px;">
@@ -286,56 +286,56 @@
       <p class="je-name wow fadeIn" data-wow-delay="1.25s">JON EVA</p>
     </div>
 
-		<script src="../../site/templates/bower_components/jquery/dist/jquery.min.js"></script>
-		<script src="../../site/templates/bower_components/foundation/js/foundation.min.js"></script>
-		<script src="../../site/templates/bower_components/isotope/dist/isotope.pkgd.min.js"></script>
-		<script src="../../site/templates/bower_components/imagesloaded/imagesloaded.pkgd.min.js"></script>
-		<script src="../../site/templates/bower_components/wow/dist/wow.min.js"></script>
-		<script src="../../site/templates/js/app.js"></script>
+    <script src="../../site/templates/bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="../../site/templates/bower_components/foundation/js/foundation.min.js"></script>
+    <script src="../../site/templates/bower_components/isotope/dist/isotope.pkgd.min.js"></script>
+    <script src="../../site/templates/bower_components/imagesloaded/imagesloaded.pkgd.min.js"></script>
+    <script src="../../site/templates/bower_components/wow/dist/wow.min.js"></script>
+    <script src="../../site/templates/js/app.js"></script>
 
 
-		<script>
+    <script>
 
-		$(document).ready(function(){
-		});
-		// isotope.js
-		var $container = $('#work').imagesLoaded( function() {
-			$container.isotope({
-					itemSelector: '.project-item',
-					layoutMode: 'masonry',
-					masonry: {
-						columnWidth: 300
-					}
-			});
-		});
-		// isotope.js resize
-		$(window).resize(function(){
-			$container.isotope('layout');
-		});
+    $(document).ready(function(){
+    });
+    // isotope.js
+    var $container = $('#work').imagesLoaded( function() {
+      $container.isotope({
+          itemSelector: '.project-item',
+          layoutMode: 'masonry',
+          masonry: {
+            columnWidth: 300
+          }
+      });
+    });
+    // isotope.js resize
+    $(window).resize(function(){
+      $container.isotope('layout');
+    });
 
-		// toggle primary navigation
-		(function togglePrimaryNavigation() {
-			var $primaryNav = $("#primary-navigation");
-			var $openNav = $(".open-primary-navigation");
-			var $closeNav = $(".close-primary-navigation");
+    // toggle primary navigation
+    (function togglePrimaryNavigation() {
+      var $primaryNav = $("#primary-navigation");
+      var $openNav = $(".open-primary-navigation");
+      var $closeNav = $(".close-primary-navigation");
 
-			$openNav.click(function(){
-				$openNav.fadeToggle();
-				$primaryNav.fadeToggle();
-				return false;
-			});
+      $openNav.click(function(){
+        $openNav.fadeToggle();
+        $primaryNav.fadeToggle();
+        return false;
+      });
 
-			$primaryNav.click(function(){
-				$primaryNav.fadeToggle();
-				$openNav.fadeToggle();
-			});
-		})();
+      $primaryNav.click(function(){
+        $primaryNav.fadeToggle();
+        $openNav.fadeToggle();
+      });
+    })();
 
-		// wow.js
-		new WOW().init({
-			mobile: false
-		});
-		</script>
+    // wow.js
+    new WOW().init({
+      mobile: false
+    });
+    </script>
 
     <script type="text/javascript">
 
@@ -362,5 +362,5 @@
 
 
 
-	</body>
+  </body>
 </html>
